RESOLVED FIXED 243887
Flexbox container width being computed incorrectly
https://bugs.webkit.org/show_bug.cgi?id=243887
Summary Flexbox container width being computed incorrectly
Sammy Gill
Reported 2022-08-12 10:52:38 PDT
Created attachment 461564 [details] Testcase It seems like we disagree on the Flexbox computed width in certain cases. In the example I am using, we compute a width of 180. I think this is from 100px (content) + 80 px (border and padding being added twice to the child which is another bug). Both Firefox and Chrome compute a container size of 65px (the border box size of the child). So it seems like there are 2 possible issues here: 1.) We are incorrectly computing an initial content size of 100px (Unless this is correct and both Firefox/Chrome are wrong) 2.) Incorrectly adding border+padding twice to child width
Attachments
Testcase (551 bytes, text/html)
2022-08-12 10:52 PDT, Sammy Gill
no flags
Radar WebKit Bug Importer
Comment 1 2022-08-12 10:55:15 PDT
Sammy Gill
Comment 2 2022-08-17 13:56:54 PDT
EWS
Comment 3 2022-09-06 10:23:48 PDT
Committed 254190@main (0599c10f9004): <https://commits.webkit.org/254190@main> Reviewed commits have been landed. Closing PR #3423 and removing active labels.
Sammy Gill
Comment 4 2022-09-09 12:43:07 PDT
*** Bug 243694 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.